// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartAxes snapshot renders 1`] = `
<div
  className="className"
>
  <div>
    <ToolMenu
      addCategory={[Function]}
      disabled={true}
    />
  </div>
  <WithStyles(Root)
    defineChart={false}
    disabledLabels={true}
    disabledTitle={true}
    graphProps={
      Object {
        "domain": Object {
          "labelStep": 1,
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "getRootNode": [Function],
        "range": Object {
          "labelStep": 1,
          "max": 10,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [Function],
          "y": [Function],
        },
        "size": Object {
          "height": 160,
          "width": 100,
        },
        "snap": Object {
          "x": [Function],
          "y": [Function],
        },
      }
    }
    isChart={true}
    labels={
      Object {
        "bottom": "",
        "left": "",
      }
    }
    mathMlOptions={Object {}}
    rootRef={[Function]}
    showLabels={true}
    showTitle={true}
  >
    <WithStyles(Grid)
      columnTickValues={Array []}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      rowTickValues={
        Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ]
      }
      xBand={[Function]}
    />
    <WithStyles(RawChartAxes)
      categories={Array []}
      defineChart={false}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      leftAxis={true}
      onChange={[Function]}
      onChangeCategory={[Function]}
      top={0}
      xBand={[Function]}
    />
    <mask
      id="chart-2645"
    >
      <rect
        fill="white"
        height={180}
        width={120}
        x={-10}
        y={-55}
      />
    </mask>
    <g
      id="marks"
      mask="url('#chart-2645')"
    >
      <Component
        data={Array []}
        defineChart={false}
        graphProps={
          Object {
            "domain": Object {
              "labelStep": 1,
              "max": 1,
              "min": 0,
              "step": 1,
            },
            "getRootNode": [Function],
            "range": Object {
              "labelStep": 1,
              "max": 10,
              "min": 0,
              "step": 1,
            },
            "scale": Object {
              "x": [Function],
              "y": [Function],
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "snap": Object {
              "x": [Function],
              "y": [Function],
            },
          }
        }
        height={160}
        onChange={[Function]}
        onChangeCategory={[Function]}
      />
    </g>
  </WithStyles(Root)>
  <AlertDialog
    open={false}
  />
</div>
`;

exports[`ChartAxes snapshot renders if size is not defined 1`] = `
<div
  className="className"
>
  <div>
    <ToolMenu
      addCategory={[Function]}
      disabled={true}
    />
  </div>
  <WithStyles(Root)
    defineChart={false}
    disabledLabels={true}
    disabledTitle={true}
    graphProps={
      Object {
        "domain": Object {
          "labelStep": 1,
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "getRootNode": [Function],
        "range": Object {
          "labelStep": 1,
          "max": 10,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [Function],
          "y": [Function],
        },
        "size": Object {
          "height": 540,
          "width": 480,
        },
        "snap": Object {
          "x": [Function],
          "y": [Function],
        },
      }
    }
    isChart={true}
    labels={
      Object {
        "bottom": "",
        "left": "",
      }
    }
    mathMlOptions={Object {}}
    rootRef={[Function]}
    showLabels={true}
    showTitle={true}
  >
    <WithStyles(Grid)
      columnTickValues={Array []}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 480,
            "width": 480,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      rowTickValues={
        Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ]
      }
      xBand={[Function]}
    />
    <WithStyles(RawChartAxes)
      categories={Array []}
      defineChart={false}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 480,
            "width": 480,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      leftAxis={true}
      onChange={[Function]}
      onChangeCategory={[Function]}
      top={0}
      xBand={[Function]}
    />
    <mask
      id="chart-1553"
    >
      <rect
        fill="white"
        height={560}
        width={500}
        x={-10}
        y={-55}
      />
    </mask>
    <g
      id="marks"
      mask="url('#chart-1553')"
    >
      <Component
        data={Array []}
        defineChart={false}
        graphProps={
          Object {
            "domain": Object {
              "labelStep": 1,
              "max": 1,
              "min": 0,
              "step": 1,
            },
            "getRootNode": [Function],
            "range": Object {
              "labelStep": 1,
              "max": 10,
              "min": 0,
              "step": 1,
            },
            "scale": Object {
              "x": [Function],
              "y": [Function],
            },
            "size": Object {
              "height": 480,
              "width": 480,
            },
            "snap": Object {
              "x": [Function],
              "y": [Function],
            },
          }
        }
        height={540}
        onChange={[Function]}
        onChangeCategory={[Function]}
      />
    </g>
  </WithStyles(Root)>
  <AlertDialog
    open={false}
  />
</div>
`;

exports[`ChartAxes snapshot renders with chartType property and empty charts property 1`] = `""`;

exports[`ChartAxes snapshot renders without chartType and charts properties 1`] = `""`;

exports[`ChartAxes snapshot renders without chartType property 1`] = `
<div
  className="className"
>
  <div>
    <ToolMenu
      addCategory={[Function]}
      disabled={true}
    />
  </div>
  <WithStyles(Root)
    defineChart={false}
    disabledLabels={true}
    disabledTitle={true}
    graphProps={
      Object {
        "domain": Object {
          "labelStep": 1,
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "getRootNode": [Function],
        "range": Object {
          "labelStep": 1,
          "max": 10,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [Function],
          "y": [Function],
        },
        "size": Object {
          "height": 160,
          "width": 100,
        },
        "snap": Object {
          "x": [Function],
          "y": [Function],
        },
      }
    }
    isChart={true}
    labels={
      Object {
        "bottom": "",
        "left": "",
      }
    }
    mathMlOptions={Object {}}
    rootRef={[Function]}
    showLabels={true}
    showTitle={true}
  >
    <WithStyles(Grid)
      columnTickValues={Array []}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      rowTickValues={
        Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ]
      }
      xBand={[Function]}
    />
    <WithStyles(RawChartAxes)
      categories={Array []}
      defineChart={false}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      leftAxis={true}
      onChange={[Function]}
      onChangeCategory={[Function]}
      top={0}
      xBand={[Function]}
    />
    <mask
      id="chart-4286"
    >
      <rect
        fill="white"
        height={180}
        width={120}
        x={-10}
        y={-55}
      />
    </mask>
    <g
      id="marks"
      mask="url('#chart-4286')"
    >
      <Component
        data={Array []}
        defineChart={false}
        graphProps={
          Object {
            "domain": Object {
              "labelStep": 1,
              "max": 1,
              "min": 0,
              "step": 1,
            },
            "getRootNode": [Function],
            "range": Object {
              "labelStep": 1,
              "max": 10,
              "min": 0,
              "step": 1,
            },
            "scale": Object {
              "x": [Function],
              "y": [Function],
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "snap": Object {
              "x": [Function],
              "y": [Function],
            },
          }
        }
        height={160}
        onChange={[Function]}
        onChangeCategory={[Function]}
      />
    </g>
  </WithStyles(Root)>
  <AlertDialog
    open={false}
  />
</div>
`;

exports[`ChartAxes snapshot renders without chartType property and empty charts property 1`] = `""`;
